examples/test/testpolicy16716.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16716
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key9: value36
      key39: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value42
          key48: value8
          key32: value44
      podSelector:
        matchLabels:
          key26: value19
          key47: value49
          key24: value2
